fix: remove scrollbar cursor for all

--- a/_sass/common/classes/_scrollbar.scss
+++ b/_sass/common/classes/_scrollbar.scss
@@ -12,9 +12,6 @@
   @if $color-thumb == default {
     $color-thumb: rgb(136, 136, 136);
   }
-  & {
-    cursor: pointer;
-  }
   &::-webkit-scrollbar {
     @if $direction == "vertical" {
       width: $size;
